Adição da logo e ajustes

--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,6 +1,6 @@
 <div class="layout-footer">
 
-  <span class="font-medium ml-2">DocCave - DCC</span>
+  <span class="font-medium ml-2">Nevyo - NVY</span>
 
   <span class="font-medium ml-2">|</span>
 
